--- a/index.html
+++ b/index.html
@@ -45,11 +45,9 @@
         <canvas id="gameCanvas"></canvas>
         </div>
         <div id="info">
+            <p><a id="muteLink" href="#" onclick="toggleMute()">mute</a>
             <p>Move with arrow keys or swipe, fire with the space bar or touch. Do your best to prevent earth from 
                 experiencig existential disaster!</p>
-            <p><a id="muteLink" href="#" onclick="toggleMute()">mute</a> | 
-                <a href="http://github.com/dwmkerr/spaceinvaders">spaceinvaders on github</a> | 
-                <a href="http://github.com/dwmkerr">more projects</a> | <a href="http://www.dwmkerr.com">dwmkerr.com</a></p>
         </div>
 
         <script src="js/starfield.js"></script>
