--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
         <canvas id="gameCanvas"></canvas>
         </div>
         <div id="info">
-            <p><a id="muteLink" href="#" onclick="toggleMute()">mute</a>
-            <p>Move with arrow keys or swipe, fire with the space bar or touch. Do your best to prevent earth from 
-                experiencig existential disaster!</p>
+            <p>Move with arrow keys or swipe, fire with the space bar or touch. Can you prevent earth from 
+                experiencig existential disaster?</p>
+                <p><a id="muteLink" href="#" onclick="toggleMute()">mute</a>
+
         </div>
 
         <script src="js/starfield.js"></script>
