--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div id="info">
             <p>Move with arrow keys or swipe, fire with the space bar or touch. Can you prevent earth from 
-                experiencig existential disaster?</p>
+                experiencing existential disaster?</p>
                 <p><a id="muteLink" href="#" onclick="toggleMute()">mute</a>
 
         </div>
