--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <canvas id="gameCanvas"></canvas>
         </div>
         <div id="info">
-            <p>Move with arrow keys or swipe, fire with the space bar or touch. Can you prevent earth from 
-                experiencing existential disaster?</p>
+            <p>Can you prevent earth from 
+                experiencing existential disaster? <br/>Move with arrow keys or swipe, fire with the space bar or touch. </p>
                 <p><a id="muteLink" href="#" onclick="toggleMute()">mute</a>
 
         </div>
