--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 width: 800px;
                 margin-left: auto;
                 margin-right: auto;
+                align-content: center;
             }
         </style>
     </head>
