--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 width: 800px;
                 margin-left: auto;
                 margin-right: auto;
-                align-content: center;
+                text-align: center;
             }
         </style>
     </head>
