--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                 top: 0px;
             }
             #gamecontainer {
-                width: 800px;
+                width: 80%;
                 margin-left: auto;
                 margin-right: auto;
             }
             #gamecanvas { 
-                width: 800px;
+                width: 80%;
                 height: 600px;
             }
             #info {
-                width: 800px;
+                width: 80%px;
                 margin-left: auto;
                 margin-right: auto;
                 text-align: center;
