--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 height: 600px;
             }
             #info {
-                width: 80%px;
+                width: 80%;
                 margin-left: auto;
                 margin-right: auto;
                 text-align: center;
