--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                 top: 0px;
             }
             #gamecontainer {
-                width: 80%;
-                margin-left: auto;
-                margin-right: auto;
+                width: 60%;
+                /* margin-left: auto;
+                margin-right: auto; */
             }
             #gamecanvas { 
-                width: 80%;
-                height: 600px;
+                width: 60%;
+                /* height: 600px; */
             }
             #info {
-                width: 80%;
+                width: 60%;
                 margin-left: auto;
                 margin-right: auto;
                 text-align: center;
