--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             }
             #gamecontainer {
                 width: 100%;
-                /* margin-left: auto;
-                margin-right: auto; */
+                margin-left: auto;
+                margin-right: auto;
             }
             #gamecanvas { 
                 width: 100%;
