--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                 top: 0px;
             }
             #gamecontainer {
-                width: 100%;
+                width: 800px;
                 margin-left: auto;
                 margin-right: auto;
             }
             #gamecanvas { 
-                width: 100%;
-                /* height: 600px; */
+                width: 800px;
+                height: 600px;
             }
             #info {
-                width: 100%;
+                width: 800px;
                 margin-left: auto;
                 margin-right: auto;
                 text-align: center;
