--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 margin-left: auto;
                 margin-right: auto;
                 text-align: center;
+                color:white;
             }
         </style>
     </head>
