--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             }
             #gamecontainer {
                 width: 800px;
-                margin-left: auto;
-                margin-right: auto;
+                /* margin-left: auto;
+                margin-right: auto; */
             }
             #gamecanvas { 
                 width: 800px;
@@ -34,8 +34,8 @@
             }
             #info {
                 width: 800px;
-                margin-left: auto;
-                margin-right: auto;
+                /* margin-left: auto;
+                margin-right: auto; */
                 text-align: center;
                 color:white;
             }
