--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 margin-right: auto; */
             }
             #gamecanvas { 
-                width: 800px;
+                width: 80%;
                 height: 600px;
             }
             #info {
