--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             }
             #gamecontainer {
                 width: 80%;
-                /* margin-left: auto;
-                margin-right: auto; */
+                margin-left: auto;
+                margin-right: auto;
             }
             #gamecanvas { 
                 width: 100%;
@@ -34,8 +34,8 @@
             }
             #info {
                 width: 80%;
-                /* margin-left: auto;
-                margin-right: auto; */
+                margin-left: auto;
+                margin-right: auto;
                 text-align: center;
                 color:white;
             }
