--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
             //  Setup the canvas.
             var canvas = document.getElementById("gameCanvas");
-            canvas.width = 420;
-            canvas.height = 600;
+            canvas.width = innerWidth;
+            canvas.height = innerHeight;
 
             //  Create the game.
             var game = new Game();
