--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 margin-right: auto;
             }
             #gamecanvas { 
-                width: 100%;
-                height: 600px;
+                width: 80%;
+                height: 80%;
             }
             #info {
                 width: 80%;
