--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 margin-right: auto;
             }
             #gamecanvas { 
-                width: 80%;
-                height: 80%;
+                width: 100%;
+                height: 600px;
             }
             #info {
                 width: 80%;
@@ -66,7 +66,7 @@
             //  Setup the canvas.
             var canvas = document.getElementById("gameCanvas");
             canvas.width = innerWidth;
-            canvas.height = innerHeight;
+            canvas.height = 600;
 
             //  Create the game.
             var game = new Game();
