--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
             }
             #gamecontainer {
                 width: 80%;
-                margin-left: auto;
-                margin-right: auto;
+                /* margin-left: auto;
+                margin-right: auto; */
             }
             #gamecanvas { 
                 width: 100%;
                 height: 600px;
             }
             #info {
-                width: 100%;
-                margin-left: auto;
-                margin-right: auto;
+                width: 80%;
+                /* margin-left: auto;
+                margin-right: auto; */
                 text-align: center;
                 color:white;
             }
