--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             //  Setup the canvas.
             var canvas = document.getElementById("gameCanvas");
             canvas.width = innerWidth;
-            canvas.height = 600;
+            canvas.height = innerHeight - 100;
 
             //  Create the game.
             var game = new Game();
