--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             //  Setup the canvas.
             var canvas = document.getElementById("gameCanvas");
-            canvas.width = innerWidth;
+            canvas.width = innerWidth - 42;
             canvas.height = innerHeight - 100;
 
             //  Create the game.
