--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             }
             #info {
                 width: 100%;
-  
+                margin-right: 10px;
+                margin-left: 10px;
                 text-align: center;
                 color:white;
             }
