--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             //  Setup the canvas.
             var canvas = document.getElementById("gameCanvas");
-            canvas.width = innerWidth;
+            canvas.width = innerWidth - 20;
             canvas.height = innerHeight - 120;
 
             //  Create the game.
