--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 top: 0px;
             }
             #gamecontainer {
-                width: 100%;
+                width: 80%;
    
             }
             #gamecanvas { 
@@ -60,7 +60,7 @@
 
             //  Setup the canvas.
             var canvas = document.getElementById("gameCanvas");
-            canvas.width = innerWidth - 20;
+            canvas.width = innerWidth;
             canvas.height = innerHeight - 120;
 
             //  Create the game.
