--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div id="info">
             <p>Can you prevent earth from 
-                experiencing existential disaster? <br/>Move with arrow keys or swipe, fire with the space bar or touch. </p>
+                experiencing existential disaster?</p>
                 <p><a id="muteLink" href="#" onclick="toggleMute()">mute</a>
 
         </div>
